# pm

./: Cargo.toml  Containerfile  Dockerfile  Justfile  README.md  cosign.key  cosign.pub  hello.mt  hello.yml  repo.yml
.github/workflows/: build.yml  clippy.yml
build_scripts/: 01-build_alpine.sh  02-copy_to_bb.sh  03-set_path.sh
examples/: binutils.mt  hello.mt  llvm.mt  musl.mt  tcc.mt
examples/orchestation_deployment/: remote_hello.mt
examples/test/: hello.mt
examples/xcompiled/: binutils.mt  musl.mt  tcc.mt
helpers/mkrepo/: Cargo.toml
helpers/mkrepo/src/: main.rs
helpers/shapkg/: Cargo.toml
helpers/shapkg/src/: main.rs
libs/colors/: Cargo.toml
libs/colors/src/: lib.rs
libs/traits/: Cargo.toml
libs/traits/src/: lib.rs
libs/unarchive/: Cargo.toml
libs/unarchive/src/: lib.rs
package_manager/: Cargo.toml
package_manager/src/: impls.rs  lib.rs  macros.rs  main.rs
src/: functions.rs  lib.rs  main.rs
tests/: hello-unix.yml  hello-windows.yml  pm.rs  shapkg.rs
