[package]
name = "mtos-docker"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.18", features = ["derive"] }
fetch-data = "0.2.0"
filedb-ng = "0.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sha256 = "1.5.0"
compress-tools = "0.15.1"
traits = {path = "libs/traits", version = "*"}
package_manager = {version = "*", path = "./package_manager"}
[workspace]
members = ["package_manager", "libs/colors", "libs/traits", "helpers/shapkg", "helpers/mkrepo"]

[[bin]]
name = "pm"
path = "package_manager/src/main.rs"

[lib]
name = "colors"
path = "libs/colors/src/lib.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha256.workspace = true
traits.workspace = true
fetch-data.workspace = true
compress-tools.workspace = true