[package]
name = "mtos-docker"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.18", features = ["derive"] }
fetch-data = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sha256 = "1.5.0"
traits = {path = "libs/traits", version = "*"}
log = "*"
package_manager = {path = "package_manager", version = "*"}
claui = {version = "0.4.0", optional = false}
colog = "*"
[workspace]
members = ["package_manager", "libs/colors", "libs/traits", "libs/unarchive", "helpers/shapkg", "helpers/mkrepo"]
resolver = "2"
[[bin]]
name = "pm"
path = "package_manager/src/main.rs"

[lib]
name = "colors"
path = "libs/colors/src/lib.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha256.workspace = true
traits.workspace = true
fetch-data.workspace = true
package_manager.workspace = true
claui = {version = "0.4.0", optional = true}
log.workspace = true
colog.workspace = true
[features]
default = ["nogui"]
gui = ["dep:claui"]
nogui = []
