[package]
name = "package_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"], workspace = true}
serde = { version = "1.0.210", features = ["derive"], workspace = true}
serde_yaml = {version = "0.9.34", workspace = true}
sha256 = {version = "1.5.0", workspace = true}
traits = { version = "0.1.0", workspace = true}
fetch-data = {workspace = true}
claui = {workspace = true, optional = true}
compress-tools = {workspace = true}
log = {workspace = true}
colog = {workspace = true}
[features]
default = ["nogui"]
gui = ["dep:claui"]
nogui = []